samples/_failures_safe/1761338845_050fe6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eea14053.c: In function ‘main’:
./samples/SAFE/__tmp_eea14053.c:169:5: error: expected declaration or statement at end of input
  169 |     printf("Enter arithmetic expression: ");
      |     ^~~~~~
